<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alarms_background"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" />

        <include
            layout="@layout/content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color" />
    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginStart="-64dp"
        android:background="@color/background_color"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/home_btn"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home" />

                    <Button
                        android:id="@+id/drawer_history_btn"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/disabled_2nd"
                        android:text="@string/questionnaire" />

                    <Button
                        android:id="@+id/question_btn"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questions" />

                    <Button
                        android:id="@+id/savingsIdeas_btn"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/savingsIdeas" />

                    <Button
                        android:id="@+id/forum_btn"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forum" />

                    <Button
                        android:id="@+id/chat_btn"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chat" />

                    <Button
                        android:id="@+id/drawer_log_out_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/myAccount" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
