<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="@dimen/margin_between_alarms"
    android:background="@color/background_color"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_alarm"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/news_card_view"
                android:paddingHorizontal="10dp"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/savingsIdeaDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/if_you_have_a_question_write_to_us"
                    android:textColor="@color/font_navy_blue"
                    android:textSize="@dimen/alarm_name_font_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/questionNameAndSurname"
                    style="@style/MobileInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/savingsIdeaDescription" />

                <EditText
                    android:id="@+id/questionSenderEmail"
                    style="@style/MobileInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionNameAndSurnameError" />

                <EditText
                    android:id="@+id/questionTopic"
                    style="@style/MobileInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:ems="10"
                    android:hint="@string/topic"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionSenderEmailError" />

                <EditText
                    android:id="@+id/questionTextMessage"
                    style="@style/MobileInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/your_message"
                    android:inputType="textPersonName"
                    android:maxLength="2000"
                    android:maxLines="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionTopicError" />

                <Button
                    android:id="@+id/questionButtonSendMessage"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/send_message"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionTextMessageError"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionButtonSendMessage"
                    app:layout_constraintVertical_bias="1.0"
                    tools:layout_editor_absoluteX="9dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="Poznan ul. Warszawska 100"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/constraintLayout4"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayout4"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/address"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                app:layout_constraintBottom_toTopOf="@+id/textView3"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_localization_icon" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="XXX-XXX-XXX"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/constraintLayout14"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayout14"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/phone_number"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <ImageView
                                android:id="@+id/imageView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                app:layout_constraintBottom_toTopOf="@+id/textView13"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_phone_icon" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                        app:layout_constraintVertical_bias="0.0">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="Poznan ul. Warszawska 100"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/constraintLayout24"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayout24"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/email_for_contact"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <ImageView
                                android:id="@+id/imageView25"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                app:layout_constraintBottom_toTopOf="@+id/textView23"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_letters_1132701" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/questionNameAndSurnameError"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="Wypełnij pole"
                    android:textColor="@color/primary_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionNameAndSurname" />

                <TextView
                    android:id="@+id/questionSenderEmailError"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="Zły email"
                    android:textColor="@color/primary_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionSenderEmail" />

                <TextView
                    android:id="@+id/questionTopicError"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="Wypełnij temat"
                    android:textColor="@color/primary_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionTopic" />

                <TextView
                    android:id="@+id/questionTextMessageError"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="Wypełnij wiadomość"
                    android:textColor="@color/primary_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionTextMessage" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>